Closed Bug 1187583 Opened 9 years ago Closed 9 years ago

[TSF][TS_E_NOLAYOUT][e10s] MS Office IME 2010's candidate window sometimes appears and flickers at top-left corner

Categories

(Core :: Widget: Win32, defect)

42 Branch
Unspecified
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
e10s + ---
firefox42 --- affected
firefox43 --- fixed

People

(Reporter: alice0775, Assigned: masayuki)

References

Details

(Keywords: inputmethod, polish, Whiteboard: [dupe me])

Attachments

(3 files, 1 obsolete file)

Attached video Rec.wmv
Steps to reproduce:
1. Start Nightly with e10s and enabled TSF (using MS Office IME2010)
2. Open about:home
3. IME on and type something
4. Press Conversion key several times OR hold down

Actual Results:
ghost candidate window appears and flickers at top-left corner

Expected Results:
No such ghost candidate window
The problem reproduce on Nightly43.0a1(2015-09-17) with MS-IME and MS Office IME2010 as well


https://hg.mozilla.org/mozilla-central/rev/e7d613b3bcfe1e865378bfac37de64560d1234ec
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0 ID:20150917030229
Disabling TSF fixes the glitch.
Bug 1204523 did not fix this problem.... :(
Sigh... MS Office IME...
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Summary: [TSF][e10s] ghost candidate window appears and flickers at top-left corner → [TSF][e10s] MS Office IME 2010's candidate window sometimes appears and flickers at top-left corner
I can reproduce this bug very low frequency on Win7. According to the log, this is really similar to bug 1204523. We should add MS Office IME 2010 to the hack target.
Comment on attachment 8662970 [details] [diff] [review]
part.1 Add a method to check if active TIP is MS Office IME 2010 for Japanese

According to Yukawa-san, GUID of profile is useful to distinguish TIPs.

https://twitter.com/NyaRuRu/status/644171839149838337
https://twitter.com/NyaRuRu/status/644175565067546625
https://twitter.com/NyaRuRu/status/644176517614977026

However, if different versions of a TIP can be installed as different TIP like ATOK, the GUID is changed per version.

https://twitter.com/d_toybox/status/644886233680711680
https://twitter.com/d_toybox/status/644886387141951489

At least for now, we can use GUID for MS Office IME 2010 for Japanese since its newer version hasn't been released and its older versions are not TIP. Perhaps, we should use GUID for other TIPs except ATOK in another bug.
Attachment #8662970 - Flags: review?(VYV03354)
Comment on attachment 8662967 [details] [diff] [review]
part.2 Apply the TS_E_NOLAYOUT hacks for MS-IME to MS Office IME 2010 for Japanese too

As I said in the patch, I believe that MS won't release MS Office IME series. And also they must not fix this bug for such legacy product. So, I think that nobody needs prefs to disable the hacks.
Attachment #8662967 - Flags: review?(VYV03354)
Comment on attachment 8662970 [details] [diff] [review]
part.1 Add a method to check if active TIP is MS Office IME 2010 for Japanese

I guess different versions of TIP will have different GUIDs in general. Because otherwise the system can't distinguish multiple versions of TIP (such as ATOK2014 and ATOK2015) when they are installed simultaneously. MS-IME (only the bundled version will be present) and Google Japanese Input (only the latest version is supported and a new version will always overwrite the older one, like all other Google apps) are rather exceptional.
Attachment #8662970 - Flags: review?(VYV03354) → review+
Attachment #8662967 - Flags: review?(VYV03354) → review+
(In reply to Masayuki Nakano (:masayuki) (Mozilla Japan) (Offline: 9/21-23, prehaps, not so active: 9/24, 9/25) from comment #10)
> At least for now, we can use GUID for MS Office IME 2010 for Japanese since
> its newer version hasn't been released and its older versions are not TIP.

Isn't MS Office IME 2007 TIP?
(In reply to Masatoshi Kimura [:emk] from comment #13)
> (In reply to Masayuki Nakano (:masayuki) (Mozilla Japan) (Offline: 9/21-23,
> prehaps, not so active: 9/24, 9/25) from comment #10)
> > At least for now, we can use GUID for MS Office IME 2010 for Japanese since
> > its newer version hasn't been released and its older versions are not TIP.
> 
> Isn't MS Office IME 2007 TIP?

Oh, according to the history, could be?

https://ja.wikipedia.org/wiki/Microsoft_IME#.E3.83.90.E3.83.BC.E3.82.B8.E3.83.A7.E3.83.B3

And it must have different GUID:
http://snow-white.cocolog-nifty.com/first/2011/02/office-ime-2007.html

But I guess I don't have Office 2007... (I must have Office 2000 and XP, though) Anyway, we need to check the behavior since nobody is sure if it needs same hack or other hacks.
https://hg.mozilla.org/integration/mozilla-inbound/rev/255824a521c1f7b7cb2b01a6302cdb95523cfb89
Bug 1187583 part.1 Add a method to check if active TIP is MS Office IME 2010 for Japanese r=emk

https://hg.mozilla.org/integration/mozilla-inbound/rev/dec41eaf2fedc00d0fe809e83fe2985c17426371
Bug 1187583 part.2 Apply the TS_E_NOLAYOUT hacks for MS-IME to MS Office IME 2010 for Japanese too r=emk
https://hg.mozilla.org/mozilla-central/rev/255824a521c1
https://hg.mozilla.org/mozilla-central/rev/dec41eaf2fed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Summary: [TSF][e10s] MS Office IME 2010's candidate window sometimes appears and flickers at top-left corner → [TSF][TS_E_NOLAYOUT][e10s] MS Office IME 2010's candidate window sometimes appears and flickers at top-left corner
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: