Bug 1187583 part.1 Add a method to check if active TIP is MS Office IME 2010 for Japanese r=emk